# neoalert

./: .gitignore  README.md  package-lock.json  package.json  render.yaml  tsconfig.app.json  vite.config.ts
backend/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/docs/: GETTING_STARTED.md
backend/docs/architecture/: 01-general-architecture.md  02-microservices-diagram.md  03-service-responsibilities.md  04-folder-structure.md  05-communication-model.md  06-main-endpoints.md  07-domain-events.md  08-security-strategy.md  09-multi-tenant-strategy.md  10-flexible-import-strategy.md  11-observability-strategy.md  12-testing-strategy.md  13-implementation-roadmap.md  14-risks-and-mitigations.md  15-microservice-skeleton-examples.md  README.md
backend/docs/database/: 01-persistence-strategy.md  02-database-per-service.md  03-conceptual-model.md  04-logical-model.md  05-core-tables.md  06-relationships.md  07-multi-tenant-strategy.md  08-geospatial-strategy.md  09-import-staging-strategy.md  10-audit-strategy.md  11-indexing-strategy.md  12-partitioning-archiving.md  13-risks-mitigations.md  14-naming-conventions.md  15-migrations-versioning.md  README.md
backend/infrastructure/database/init/: 01-create-databases.sql  02-extensions.sql  03-apply-schemas.sh  apply-service-migrations.sh
backend/infrastructure/database/schemas/ai-service/: V001__initial_schema.sql
backend/infrastructure/database/schemas/api-gateway/: V001__initial_schema.sql
backend/infrastructure/database/schemas/attendance-service/: V001__initial_schema.sql
backend/infrastructure/database/schemas/audit-service/: V001__initial_schema.sql
backend/infrastructure/database/schemas/employee-service/: V001__initial_schema.sql
backend/infrastructure/database/schemas/file-ingestion-service/: V001__initial_schema.sql
backend/infrastructure/database/schemas/identity-service/: V001__initial_schema.sql  V002__auth_tokens_and_oauth.sql
backend/infrastructure/database/schemas/incident-service/: V001__initial_schema.sql
backend/infrastructure/database/schemas/location-service/: V001__initial_schema.sql
backend/infrastructure/database/schemas/notification-service/: V001__initial_schema.sql
backend/infrastructure/database/seeds/: structure_a_template.sql  structure_b_template.sql
backend/infrastructure/docker/postgres/init/: README.md
backend/infrastructure/postgres/: init-databases.sql
backend/scripts/: _run-service.ps1  check-health.ps1  fix_all_indentation.py  fix_auth_dependencies.py  fix_dtos.py  fix_entities.py  init-db.ps1  scaffold_services.py  start-all.ps1  stop-all.ps1
backend/services/ai-service/: Dockerfile  README.md  pyproject.toml
backend/services/api-gateway/: Dockerfile  README.md  pyproject.toml
backend/services/attendance-service/: Dockerfile  README.md  pyproject.toml
backend/services/audit-service/: Dockerfile  README.md  pyproject.toml
backend/services/employee-service/: Dockerfile  README.md  pyproject.toml
backend/services/file-ingestion-service/: Dockerfile  README.md  pyproject.toml
backend/services/identity-service/: Dockerfile  README.md  pyproject.toml
backend/services/identity-service/tests/: conftest.py
backend/services/incident-service/: Dockerfile  README.md  pyproject.toml
backend/services/location-service/: Dockerfile  README.md  pyproject.toml
backend/services/notification-service/: Dockerfile  README.md  pyproject.toml
backend/services/reporting-service/: Dockerfile  README.md  pyproject.toml
backend/services/template-configuration-service/: Dockerfile  README.md  pyproject.toml
backend/services/tenant-service/: Dockerfile  README.md  pyproject.toml
backend/shared/contracts/: pyproject.toml
backend/shared/observability/: pyproject.toml
(+549 files in other folders)
