[project]
name = "neoalert-backend"
version = "0.1.0"
description = "NEOALERT enterprise omnichannel backend platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '/(\.venv|venv|build|dist)/'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["neoalert_contracts", "neoalert_observability"]
skip = [".venv", "venv", "build", "dist"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TCH",
]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["tests/", "build/", "dist/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["services"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "contract: contract tests against shared schemas",
]
