[project]
name = "neoalert-contracts"
version = "0.1.0"
description = "Shared event schemas and API contracts for NEOALERT"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neoalert_contracts"]
