[project]
name = "neoalert-observability"
version = "0.1.0"
description = "Shared observability utilities for NEOALERT microservices"
requires-python = ">=3.11"
dependencies = [
    "structlog>=24.1.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neoalert_observability"]
